--- a/EventManagementSystemAPI/EventManagementSystemAPI.csproj
+++ b/EventManagementSystemAPI/EventManagementSystemAPI.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>94001c72-2e8a-4890-b328-58f306af6018</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
