--- a/.github/workflows/app-eventmgmtsys-api-eastus-dev-001.yml
+++ b/.github/workflows/app-eventmgmtsys-api-eastus-dev-001.yml
@@ -7,7 +7,7 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: EventManagementSystemAPI\publish
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 8.0.x
-  WORKING_DIRECTORY: EventManagementSystemAPI
+  WORKING_DIRECTORY: ./EventManagementSystemAPI/EventManagementSystemAPI.csproj
 jobs:
   build:
     runs-on: windows-latest
