--- a/.github/workflows/ci-cd-production.yml
+++ b/.github/workflows/ci-cd-production.yml
@@ -1,4 +1,5 @@
 name: CI/CD for Production
+
 on:
   push:
     branches:
@@ -6,49 +7,59 @@ on:
   pull_request:
     branches:
       - master
-  
+
 env:
-  AZURE_WEBAPP_NAME: app-eventmgmtsys-api-eastus-dev-001
-  AZURE_WEBAPP_PACKAGE_PATH: EventManagementSystemAPI\publish
+  AZURE_WEBAPP_NAME: app-eventmgmtsys-api-eastus-prod-001
+  AZURE_WEBAPP_PACKAGE_PATH: EventManagementSystemAPI/publish
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 8.0.x
   WORKING_DIRECTORY: ./EventManagementSystemAPI/EventManagementSystemAPI.csproj
+
 jobs:
   build:
     runs-on: windows-latest
+
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
-    - name: Restore
+
+    - name: Restore Dependencies
       run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
-    - name: Build
+
+    - name: Build Project
       run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
-    - name: Test
+
+    - name: Run Tests
       run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
-    - name: Publish
+
+    - name: Publish Project
       run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
-    - name: Publish Artifacts
+
+    - name: Upload Artifact for Deployment
       uses: actions/upload-artifact@v3
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
   deploy:
     runs-on: windows-latest
     needs: build
+
     steps:
-    - name: Download artifact from build job
+    - name: Download Artifact from Build Job
       uses: actions/download-artifact@v3
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
-    # deploy to azure 
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.APP_EVENTMGMTSYS_API_EASTUS_DEV_001_7F8E }}
+        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE_PROD }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
