Fix project references in Hexagonal Architecture

--- a/EventMS.Application/EventMS.Application.csproj
+++ b/EventMS.Application/EventMS.Application.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EventMS.Domain\EventMS.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
