--- a/.github/workflows/ci-cd-production.yml
+++ b/.github/workflows/ci-cd-production.yml
@@ -47,11 +47,19 @@ jobs:
     needs: build
 
     steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
     - name: Download Artifact from Build Job
       uses: actions/download-artifact@v3
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+    - name: Setup .NET SDK
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
 
     - name: Run Tests
       run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
