Implement Event Creation Feature and Dependency Injection for Clean Architecture
- Added `Event` entity in the Domain layer to represent event data.
- Created `ICreateEventUseCase` and `CreateEventUseCase` in the Application layer for handling business logic related to event creation.
- Implemented `IEventRepository` in the Domain layer and its concrete implementation `EventRepository` in the Infrastructure layer for database operations.
- Added `EventDto` in the UI layer for data transfer between the UI and backend, including necessary validation annotations.
- Configured Dependency Injection in `DependencyInjectionManager` to register repositories and use cases.
- Moved `ExampleSchemaFilter` to the UI layer to provide example data for Swagger documentation.
- Configured Swagger and added necessary services in `Program.cs`.

References:
- Added references from `EventManagementSystemAPI` to `Application` and `Infrastructure` layers to allow the UI to access application logic and infrastructure implementations."

--- a/EventManagementSystemAPI/EventManagementSystemAPI.csproj
+++ b/EventManagementSystemAPI/EventManagementSystemAPI.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EventMS.Application\EventMS.Application.csproj" />
     <ProjectReference Include="..\EventMS.Infrastructure\EventMS.Infrastructure.csproj" />
   </ItemGroup>
 
