Organize project structure into src and test directories

--- a/EventManagementSystemAPI/EventManagementSystemAPI.csproj
+++ b/EventManagementSystemAPI/EventManagementSystemAPI.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EventMS.Application\EventMS.Application.csproj" />
+    <ProjectReference Include="..\EventMS.Domain\EventMS.Domain.csproj" />
     <ProjectReference Include="..\EventMS.Infrastructure\EventMS.Infrastructure.csproj" />
   </ItemGroup>
 
