--- a/.github/workflows/ci-cd-develop.yml
+++ b/.github/workflows/ci-cd-develop.yml
@@ -13,6 +13,10 @@ env:
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 8.0.x
   WORKING_DIRECTORY: ./EventManagementSystemAPI/EventManagementSystemAPI.csproj
+  WORKING_DIRECTORY_API_TESTS: ./EventMS.API.Tests/EventMS.API.Tests.csproj
+  WORKING_DIRECTORY_APPLICATION_TESTS: ./EventMS.Application.Tests/EventMS.Application.Tests.csproj
+  WORKING_DIRECTORY_DOMAIN_TESTS: ./EventMS.Domain.Tests/EventMS.Domain.Tests.csproj
+  WORKING_DIRECTORY_INFRASTRUCTURE_TESTS: ./EventMS.Infrastructure.Tests/EventMS.Infrastructure.Tests.csproj
 
 jobs:
   build:
@@ -61,17 +65,17 @@ jobs:
       with:
         dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
 
-    - name: Run Tests for EventManagementSystemAPI
-      run: dotnet test ./Tests/EventManagementSystemAPI.Tests/EventManagementSystemAPI.Tests.csproj --no-build --configuration ${{ env.CONFIGURATION }}
+    - name: Run Tests for API
+      run: dotnet test "${{ env.WORKING_DIRECTORY_API_TESTS }}" --no-build --configuration ${{ env.CONFIGURATION }}
 
     - name: Run Tests for Application
-      run: dotnet test ./Tests/EventMS.Application.Tests/EventMS.Application.Tests.csproj --no-build --configuration ${{ env.CONFIGURATION }}
+      run: dotnet test "${{ env.WORKING_DIRECTORY_APPLICATION_TESTS }}" --no-build --configuration ${{ env.CONFIGURATION }}
 
     - name: Run Tests for Domain
-      run: dotnet test ./Tests/EventMS.Domain.Tests/EventMS.Domain.Tests.csproj --no-build --configuration ${{ env.CONFIGURATION }}
+      run: dotnet test "${{ env.WORKING_DIRECTORY_DOMAIN_TESTS }}" --no-build --configuration ${{ env.CONFIGURATION }}
 
     - name: Run Tests for Infrastructure
-      run: dotnet test ./Tests/EventMS.Infrastructure.Tests/EventMS.Infrastructure.Tests.csproj --no-build --configuration ${{ env.CONFIGURATION }}
+      run: dotnet test "${{ env.WORKING_DIRECTORY_INFRASTRUCTURE_TESTS }}" --no-build --configuration ${{ env.CONFIGURATION }}
 
   deploy:
     runs-on: windows-latest
