--- a/.github/workflows/ci-cd-develop.yml
+++ b/.github/workflows/ci-cd-develop.yml
@@ -28,10 +28,10 @@ jobs:
         dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
 
     - name: Restore Dependencies
-      run: dotnet restore
+      run: dotnet restore ./Event-Management-System.sln
 
     - name: Build Project
-      run: dotnet build --configuration ${{ env.CONFIGURATION }} --no-restore
+      run: dotnet build ./Event-Management-System.sln --no-restore
 
     - name: Publish Project
       run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
@@ -56,7 +56,7 @@ jobs:
         dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
 
     - name: Run Tests
-      run: dotnet test --no-build --configuration ${{ env.CONFIGURATION }}
+      run: dotnet test ./EventMS.Domain.Tests/EventMS.Domain.Tests.csproj --no-buil --verbosity normal   d
 
   deploy:
     runs-on: windows-latest
