--- a/.github/workflows/ci-cd-develop.yml
+++ b/.github/workflows/ci-cd-develop.yml
@@ -30,11 +30,11 @@ jobs:
     - name: Restore Dependencies
       run: dotnet restore ./Event-Management-System.sln
 
-    - name: Build Project
+    - name: Build Solution
       run: dotnet build ./Event-Management-System.sln --configuration ${{ env.CONFIGURATION }} --no-restore
 
-    - name: Publish Project
-      run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
+    - name: Publish API Project
+      run: dotnet publish ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }} --no-build --output ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
     - name: Upload Artifact for Deployment
       uses: actions/upload-artifact@v3
@@ -56,7 +56,17 @@ jobs:
         dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
 
     - name: Run Tests
-      run: dotnet test ./Event-Management-System.sln --configuration ${{ env.CONFIGURATION }} --no-build --verbosity normal
+      run: |
+        dotnet test ./Event-Management-System.sln --configuration ${{ env.CONFIGURATION }} --no-build --verbosity normal
+      continue-on-error: true
+
+    - name: List Files in Test Directories
+      run: |
+        echo "Listing files in test directories:"
+        ls -R ./EventManagementSystemAPI.Tests/bin/Release/net8.0
+        ls -R ./EventMS.Application.Tests/bin/Release/net8.0
+        ls -R ./EventMS.Infrastructure.Tests/bin/Release/net8.0
+        ls -R ./EventMS.Domain.Tests/bin/Release/net8.0
 
   deploy:
     runs-on: windows-latest
@@ -73,6 +83,6 @@ jobs:
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.APP_EVENTMGMTSYS_API_EASTUS_DEV_001_7F8E }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
